# CRUD_operations_for_RESTApi

./: README.md  main.py  pyproject.toml
migration/: env.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
